--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Razo Trans Utility Privated Limited",
+  "name": "Optimista Privated Limited",
   "version": "4.5.0",
-  "description": "Razo Trans Utility",
+  "description": "Optimista",
   "homepage": "/",
   "bugs": {
     "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
